# cbz-tools-viewer

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.ja.md  README.md  THIRDPARTY_LICENSES.md  build.rs
.github/workflows/: build.yml
docs/: DANGER_ZONE_RECOVERY.md  book-groups.md  operation.ja.md  operation.md
docs/assets/demo-books/sovereign-stars/: README.md
docs/dev/: SimpleStreaming.md  Spad.md  cli_public_spec.md  ipc_contract.md  thumbnail_page_map_design.md
docs/dev/history/: nvjpeg-gpu-decode-experiment-notes.md  page-map-format-experiment-notes.md  rust-2024-crates-upgrade-2026-07.ja.md  windows-startup-flicker-animation-investigation.md
docs/todo/: nvjpeg_gpu_batch_experiment_plan.md
scripts/: generate_windows_icon.py  package_windows_release.ps1
src/: app_identity.rs  main.rs  repaint.rs  session.rs
src/app/: entry_properties_dialog.rs  external_tool.rs  file_ops.rs  library_ops.rs  mod.rs  platform.rs  ui_helpers.rs  viewer_app.rs  viewer_ops.rs
src/domain/: app_settings.rs  app_settings_codec.rs  archive.rs  archive_settings.rs  filename_parser.rs  ipc_contract.rs  kind_group.rs  mod.rs  page.rs  page_map.rs  performance.rs  sort.rs  thumbnail.rs
src/infra/: app_settings_resolution.rs  app_settings_store.rs  config_io.rs  favorite_store.rs  ipc.rs  kind_group_store.rs  kind_groups_template.toml  mod.rs  system_resources.rs
src/infra/archive/: cbz_rebuild.rs  cbz_rebuild_transaction.rs  epub.rs  folder.rs  mod.rs  page_map.rs  page_map_rar.rs  rar.rs  zip.rs
src/infra/cache/: artifact_failure.rs  disk.rs  memory.rs  mod.rs  page_map.rs
src/infra/fs/: scanner.rs
src/infra/image/: animated.rs  decode.rs  mod.rs  page_map.rs
src/infra/page_map/: build.rs  coordinator.rs  mod.rs  viewer_bootstrap.rs
src/infra/worker/: external_tool_worker.rs  mod.rs  prefetch.rs  storage_medium.rs  thumb_worker.rs  viewer_loader.rs
src/platform/: mod.rs  windows_drag.rs  windows_monitor.rs  windows_window.rs
src/ui/: common.rs  i18n.rs  icons.rs  library.rs  mod.rs  sidebar.rs  theme.rs  thumb_cache.rs  topbar.rs  virtual_grid.rs
src/ui/settings/: cache.rs  display.rs  external_tools.rs  mod.rs  performance.rs  widgets.rs
src/ui/viewer/: auto_spread_plan.rs  decode_layout.rs  draw.rs  gpu_texture_history.rs  gpu_warmup_cache.rs  gpu_warmup_planner.rs  mod.rs  progress.rs  state.rs  streaming_cache.rs  toolbar.rs  worker_manager.rs  working_set.rs
src/util/: archive_path.rs  book_nav.rs  mod.rs  natural_sort.rs  path_eq.rs
